@@ -1,5 +1,8 @@
 package Java8;
 
+import java.util.Arrays;
+import java.util.List;
+
 /**
  * using filter method to filter the list of elements
  */
@@ -7,7 +10,9 @@ public class FilterListExample {
 
     public static void main(String[] args){
         //filter data with vaues greater than 30.
-        //List<Integer> lst = List.of(10,20,30,40,50,60,70);
-        //lst.stream().filter(i -> i>30).forEach(System.out.println(i));
+        List<Integer> lst =  Arrays.asList(10, 20, 30, 40, 50, 60, 70);
+             lst.stream()
+                .filter(i -> i>30)
+                .forEach(System.out::println);
     }
 }
